fix: [jdk17] replace List.getFirst() with get(0) in DbIndexVectorQueryNodes
List.getFirst() is a Java 21 default method not available on Java 17.
Found via the JDK17 sweep after cherry-picking commit 8317db4 (JVector
EUCLIDEAN similarity fix), which applied with zero conflicts but introduced
this call.